--- a/Site/Dev/public/index.html
+++ b/Site/Dev/public/index.html
@@ -50,12 +50,34 @@
     measurementId: "G-FW64GXVQ28",
   }
   firebase.initializeApp(firebaseConfig);
+  
+  if (screen.orientation) {
+     screen.orientation.lock("portrait");
+  }
+
+  
   let userId = null
   let unity = null
   const googleProvider = new firebase.auth.GoogleAuthProvider();
   const facebookProvider = new firebase.auth.FacebookAuthProvider();
   const btnCancelPayment = document.querySelector('#btn-cancelPayment')
   const stripe = Stripe("pk_live_51O9azOCJmlrAlGBoAojhLshRHV3rr5qqUXrdG13NYxbpkfLU69WVgypk06ZiARta7y7LSA3wEhbJNf2K6CvWP5Wf00trRX4rYy")
+
+  function CheckIsPwa()
+  {
+    const isInStandaloneMode = () =>
+      (window.matchMedia('(display-mode: standalone)').matches) || (window.navigator.standalone) || document.referrer.includes('android-app://');
+
+   if (isInStandaloneMode()) {
+      console.log("webapp is installed");
+      return false;
+   }
+   else
+   {
+      console.log("webapp is not installed");
+       return true;
+   }
+  }
 
   function SetUserId(id){
     userId = id
