--- a/Site/Demo/public/index.html
+++ b/Site/Demo/public/index.html
@@ -51,11 +51,6 @@
   }
   firebase.initializeApp(firebaseConfig);
   
-  if (screen.orientation) {
-     screen.orientation.lock("portrait");
-  }
-
-  
   let userId = null
   let unity = null
   const googleProvider = new firebase.auth.GoogleAuthProvider();
@@ -66,17 +61,23 @@
   function CheckIsPwa()
   {
     const isInStandaloneMode = () =>
-      (window.matchMedia('(display-mode: standalone)').matches) || (window.navigator.standalone) || document.referrer.includes('android-app://');
+        (window.matchMedia('(display-mode: standalone)').matches) ||
+        (window.navigator.standalone) ||
+        document.referrer.includes('android-app://');
 
-   if (isInStandaloneMode()) {
-      console.log("webapp is installed");
-      return false;
-   }
-   else
-   {
-      console.log("webapp is not installed");
-       return true;
-   }
+    // Check if opened on PC
+    const isOnPC = !/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+
+    if (isInStandaloneMode()) {
+        console.log("webapp is installed");
+        return false;
+    } else if (isOnPC) {
+        console.log("webapp is opened on PC");
+        return false;
+    } else {
+        console.log("webapp is not installed");
+        return true;
+    }
   }
 
   function SetUserId(id){
