--- a/Site/Dev/public/index.html
+++ b/Site/Dev/public/index.html
@@ -58,27 +58,28 @@
   const btnCancelPayment = document.querySelector('#btn-cancelPayment')
   const stripe = Stripe("pk_live_51O9azOCJmlrAlGBoAojhLshRHV3rr5qqUXrdG13NYxbpkfLU69WVgypk06ZiARta7y7LSA3wEhbJNf2K6CvWP5Wf00trRX4rYy")
 
-  function CheckIsPwa()
-  {
+  function CheckIsPwa() {
     const isInStandaloneMode = () =>
-        (window.matchMedia('(display-mode: standalone)').matches) ||
-        (window.navigator.standalone) ||
-        document.referrer.includes('android-app://');
+            (window.matchMedia('(display-mode: standalone)').matches) ||
+            (window.navigator.standalone) ||
+            document.referrer.includes('android-app://');
 
-    // Check if opened on PC
-    const isOnPC = !/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+    const isIOS = /iPhone|iPad|iPod/.test(navigator.userAgent);
+    const isAndroid = /Android/.test(navigator.userAgent);
+    const isOnPC = !isIOS && !isAndroid;
 
-    if (isInStandaloneMode()) {
-        console.log("webapp is installed");
-        return false;
+    if (isInStandaloneMode() || isAndroid) {
+      console.log("Web app is installed (PWA mode).");
+      return true;
     } else if (isOnPC) {
-        console.log("webapp is opened on PC");
-        return false;
+      console.log("Web app is opened on PC.");
+      return true;
     } else {
-        console.log("webapp is not installed");
-        return true;
+      console.log("Web app is not installed as a PWA and not opened on PC.");
+      return false;
     }
   }
+
 
   function SetUserId(id){
     userId = id
