--- a/Site/Dev/public/index.html
+++ b/Site/Dev/public/index.html
@@ -73,7 +73,7 @@
         return false;
     } else if (isOnPC) {
         console.log("webapp is opened on PC");
-        return false;
+        return true;
     } else {
         console.log("webapp is not installed");
         return true;
